Small fixes... things /should/ be loaded.

--- a/userRss/src/it/unipr/aotlab/userRss/view/view.html
+++ b/userRss/src/it/unipr/aotlab/userRss/view/view.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Blogracy</title>
-    <link type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <!--
     <script type="text/javascript" src="view.js" />
     -->
