Kind of done the rough layout. We need a ui designer.

--- a/userRss/src/it/unipr/aotlab/userRss/view/main.css
+++ b/userRss/src/it/unipr/aotlab/userRss/view/main.css
@@ -20,7 +20,22 @@
  * THE SOFTWARE.
  */
 
-div#messages {
-    background-color: gray;
+div#page {
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+div#main {
+    width: 80%;
+    float: left;
+}
+
+div#sidebar {
+    width: 15%;
+    float: right;
+}
+
+div {
+    border: black dashed thin;
 }
 
