--- a/userRss/src/it/unipr/aotlab/userRss/view/view.html
+++ b/userRss/src/it/unipr/aotlab/userRss/view/view.html
@@ -3,41 +3,43 @@
 <html>
 <head>
     <title>Blogracy</title>
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <!--
-    <script type="text/javascript" src="view.js" />
-    -->
+    <link rel="stylesheet" type="text/css" href="main.css"/>
+    <script type="text/javascript" src="view.js" ></script>
 </head>
 <body>
 <div id="page">
-    <h1>Blogracy</h1>
-    <div id="entry-div">
-        <h2>Send Message</h2>
-        <form id="entry-form">
-            <input type="text" />
-            <input type="button" name="send" value="send" onclick="send_message()"/>
-        </form>
+    <div id="header">
+        <h1>Blogracy</h1>
     </div>
-    <div id="messages">
-        <h2>Messages</h2>
-    </div>
-    <div id="followees">
-        <h2><a href="view.html" name="followees">Followees</a></h2>
-        <ul id="followees-ul">
+    <div id="main">
+        <div id="entry-div">
+            <h2>Send Message</h2>
 
-        </ul>
-    </div>
-    <div id="followers">
-        <h2><a href="boom.html">Followers</a></h2>
-        <ul id="followers-ul">
-            
-        </ul>
-    </div>
-    <div id="tags">
-        <h2><a href="#followees">Tags</a></h2>
-        <ul id="tags-ul">
 
-        </ul>
+        </div>
+        <div id="messages-div">
+            <h2>Messages</h2>
+        </div>
+    </div>
+    <div id="sidebar">
+        <div id="followees">
+            <h2><a href="view.html" name="followees">Followees</a></h2>
+            <ul id="followees-ul">
+
+            </ul>
+        </div>
+        <div id="followers">
+            <h2><a href="boom.html">Followers</a></h2>
+            <ul id="followers-ul">
+
+            </ul>
+        </div>
+        <div id="tags">
+            <h2><a href="#followees">Tags</a></h2>
+            <ul id="tags-ul">
+
+            </ul>
+        </div>
     </div>
 </div>
 </body>
