Inserted static files into config. Apparently things should work, but do not.

--- a/blogracy/src/resources/templates/GET/index.vm
+++ b/blogracy/src/resources/templates/GET/index.vm
@@ -3,8 +3,8 @@
 <html>
 <head>
     <title>Blogracy</title>
-    <link rel="stylesheet" type="text/css" href="main.css"/>
-    <script type="text/javascript" src="view.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <script type="text/javascript" src="scrips/main.js"></script>
 </head>
 <body>
 <div id="page">
