--- a/blogracy/src/resources/templates/GET/index.vm
+++ b/blogracy/src/resources/templates/GET/index.vm
@@ -15,7 +15,25 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet"/>
+
+    <script src="scripts/jquery-1.7.js"></script>
+    <script src="scripts/jquery.form.js"></script>
+
+    <script type="text/javascript">
+        // wait for the DOM to be loaded
+        $(document).ready(function() {
+            // bind 'myForm' and provide a simple callback function
+            $('#message-send').ajaxForm({
+                url: 'messages',
+                clearForm: true,
+                type: 'POST',
+                success: function() { alert("Fooo!"); }
+            });
+        });
+
+    </script>
+
     <style type="text/css">
             /* Override some defaults */
         html, body {
@@ -112,15 +130,12 @@
             <div class="span10  ">
                 <h2>Messages</h2>
 
-                <form class="span10">
+                <form class="span10" id="message-send">
                     <fieldset class="form-stacked">
                         <div class="clearfix">
                             <label for="messageArea">Send a new message</label>
-
                             <div class="input">
-                                <textarea class="xxlarge" name="textarea" id="messageArea" rows="3">
-
-                                </textarea>
+                                <textarea class="xxlarge" name="message" id="messageArea" rows="3"></textarea>
                             </div>
                         </div>
                     </fieldset>
