--- a/blogracy/src/resources/templates/GET/index.vm
+++ b/blogracy/src/resources/templates/GET/index.vm
@@ -31,13 +31,9 @@
                 success: function() {
                     console.log(arguments);
                 },
-                ajaxError: function(event, jqXHR, ajaxSettings, thrownError) {
-                    console.log(event);
-                    console.log(ajaxSettings);
-                    if(ajaxSettings.url == "messages") {
-                        var errorMessage = '<div class="alert-message block-message warning">Crap</div>';
-
-                    }
+                error: function() {
+                    console.log("ERROR!");
+                    console.log(arguments);
                 }
             });
         });
