--- a/blogracy/src/resources/templates/GET/index.vm
+++ b/blogracy/src/resources/templates/GET/index.vm
@@ -19,11 +19,11 @@
 
     <script src="scripts/jquery-1.7.js"></script>
     <script src="scripts/jquery.form.js"></script>
+    <script src="scripts/bootstrap-alerts.js"></script>
 
     <script type="text/javascript">
         // wait for the DOM to be loaded
-        $(document).ready(function() {
-            // bind 'myForm' and provide a simple callback function
+        $(function() {
             $('#message-send').ajaxForm({
                 url: 'messages',
                 clearForm: true,
@@ -31,9 +31,14 @@
                 success: function() {
                     console.log(arguments);
                 },
-                error: function() {
-                    console.log("ERROR!");
-                    console.log(arguments);
+                error: function(request, status, statusMessage) {
+                    //var serverSideException = JSON.parse(request.responseText);
+                    var errorMessage = '<div class="alert-message block-message error">' +
+                                       '<a class="close" href="#">x</a>' +
+                                       '<p><strong>' + 'HEY' + '</strong></p>' +
+                                        '</div>';
+                    $(errorPlace).html(errorMessage);
+                    $(".alert-message").alert();
                 }
             });
         });
@@ -130,11 +135,14 @@
                 <small>(hardcoded email)</small>
             </h1>
         </div>
-        <div class="row" id="errorPlace">
+        <div class="row">
+            <div id="errorPlace">
 
+            </div>
         </div>
         <div class="row">
-            <div class="span10  ">
+
+            <div class="span10">
                 <h2>Messages</h2>
 
                 <form class="span10" id="message-send">
