--- a/blogracy/src/resources/templates/GET/index.vm
+++ b/blogracy/src/resources/templates/GET/index.vm
@@ -32,14 +32,15 @@
                     console.log(arguments);
                 },
                 error: function(request, status, statusMessage) {
-                    //var serverSideException = JSON.parse(request.responseText);
-                    var errorMessage = '<div class="alert-message block-message error">' +
-                                       '<a class="close" href="#">x</a>' +
-                                       '<p><strong>' + 'HEY' + '</strong></p>' +
-                                        '</div>';
+                    var serverSideException = JSON.parse(request.responseText);
+                    var errorMessage = '<div class="alert-message block-message error"><a class="close" href="#">x</a>' +
+                                       '<p><strong>' + serverSideException.errorMessage + '</strong></p>' +
+                                        '<pre>' + serverSideException.errorTrace.join("\n") + '</pre>' +
+                                       '</div>';
                     $(errorPlace).html(errorMessage);
                     $(".alert-message").alert();
                 }
+                
             });
         });
 
