--- a/src/main/resources/templates/GET/index.vm
+++ b/src/main/resources/templates/GET/index.vm
@@ -149,9 +149,17 @@
                 <form class="span10" id="message-send">
                     <fieldset class="form-stacked">
                         <div class="clearfix">
-                            <label for="messageArea">Send a new message</label>
+                            <label for="messageArea">Share a new message</label>
                             <div class="input">
                                 <textarea class="xxlarge" name="message" id="messageArea" rows="3"></textarea>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <fieldset class="form-stacked">
+                        <div class="clearfix">
+                            <label for="fileArea">Share a new file</label>
+                            <div class="input">
+                                <input class="xylarge" name="file" id="fileArea" type="file" />
                             </div>
                         </div>
                     </fieldset>
